--- a/workshops/202211-KCD-UK/application/Dockerfile
+++ b/workshops/202211-KCD-UK/application/Dockerfile
@@ -31,4 +31,4 @@ USER node
 # Tini is now available at /sbin/tini
 ENTRYPOINT ["/sbin/tini", "--"]
 
-CMD ./node_modules/.bin/lc39 ./index.js --port=${HTTP_PORT} --log-level=${LOG_LEVEL} --prefix=${SERVICE_PREFIX} --expose-metrics=${EXPOSE_METRICS}
+CMD ./node_modules/.bin/lc39 ./src/index.js --port=${HTTP_PORT} --log-level=${LOG_LEVEL} --prefix=${SERVICE_PREFIX} --expose-metrics=${EXPOSE_METRICS}
