--- a/workshops/202211-KCD-UK/application/package.json
+++ b/workshops/202211-KCD-UK/application/package.json
@@ -17,7 +17,9 @@
     "version": "npm run update-changelog && npm run update-docker-version && rm -fr Dockerfile.bck && git add CHANGELOG.md Dockerfile"
   },
   "dependencies": {
-    "@mia-platform/lc39": "^6.0.2"
+    "@fastify/env": "^3.0.0",
+    "@mia-platform/lc39": "^6.0.2",
+    "fastify-plugin": "^3.0.1"
   },
   "devDependencies": {
     "@mia-platform/eslint-config-mia": "^3.0.0",
