--- a/workshops/202211-KCD-UK/application/package.json
+++ b/workshops/202211-KCD-UK/application/package.json
@@ -8,7 +8,7 @@
     "coverage": "npm run unit -- --coverage-report=text-summary",
     "postcoverage": "tap --coverage-report=lcov --no-browser",
     "lint": "eslint . --ignore-path=.gitignore",
-    "start": "lc39 index.js",
+    "start": "lc39 src/index.js",
     "start:local": "npm start -- --env-path ./default.env",
     "test": "npm run lint && npm run unit",
     "update-docker-version": "sed -i.bck \"s|version=\\\"[0-9]*\\.[0-9]*\\.[0-9]*.*\\\"|version=\\\"${npm_package_version}\\\"|\" Dockerfile",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@fastify/env": "^3.0.0",
+    "@fastify/mongodb": "^5.0.0",
     "@mia-platform/lc39": "^6.0.2",
     "fastify-plugin": "^3.0.1"
   },
