fix: k8s config for running a simple mongodb

--- a/workshops/202211-KCD-UK/kubefiles/application.deployment.yaml
+++ b/workshops/202211-KCD-UK/kubefiles/application.deployment.yaml
@@ -36,6 +36,10 @@ spec:
             name: extended-oas
       - name: application
         image: ghcr.io/rond-authz/workshops/2022-kcd-uk:feat-complete-workshop
+        imagePullPolicy: Always
+        env:
+          - name: MONGODB_URL
+            value: "mongodb://mongodb:27017/kcdapp"
         resources:
           limits:
             memory: "128Mi"
