--- a/workshops/202211-KCD-UK/application/package.json
+++ b/workshops/202211-KCD-UK/application/package.json
@@ -20,14 +20,16 @@
     "@fastify/env": "^3.0.0",
     "@fastify/mongodb": "^5.0.0",
     "@mia-platform/lc39": "^6.0.2",
+    "axios": "^1.1.3",
     "fastify-plugin": "^3.0.1",
+    "http-errors": "^2.0.0",
     "mongodb": "^4.12.0",
     "ramda": "^0.28.0"
   },
   "devDependencies": {
     "@mia-platform/eslint-config-mia": "^3.0.0",
     "eslint": "^8.17.0",
-    "nock": "^13.2.6",
+    "nock": "^13.2.9",
     "pre-commit": "^1.2.2",
     "tap": "^16.2.0"
   },
