--- a/workshops/202211-KCD-UK/kubefiles/policies.configmap.yaml
+++ b/workshops/202211-KCD-UK/kubefiles/policies.configmap.yaml
@@ -28,6 +28,10 @@ data:
       user_has_role("admin")
     }
 
+    allow_delete_inventory_item {
+      user_has_role("admin")
+    }
+
     filter_inventory {
       user_has_role("admin")
       query := data.resources[_]
