--- a/workshops/202211-KCD-UK/kubefiles/routes.configmap.yaml
+++ b/workshops/202211-KCD-UK/kubefiles/routes.configmap.yaml
@@ -23,6 +23,13 @@ data:
               }
             }
           },
+          "delete": {
+            "x-rond": {
+              "requestFlow": {
+                "policyName": "allow_delete_inventory_item"
+              }
+            }
+          },
           "get": {
             "x-rond": {
               "requestFlow": {
