fix: change docker image name for kcd workshop

--- a/workshops/202211-KCD-UK/compose/docker-compose.yaml
+++ b/workshops/202211-KCD-UK/compose/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
       - kcd_app_network
   
   app:
-    image: ghcr.io/rond-authz/workshops/2022-kcd-uk:feat-complete-workshop
+    image: ghcr.io/rond-authz/workshops/2022-kcd-uk:main
     container_name: app-kcd-workshop
     ports:
       - '40000:3000'
